gateway-camel/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  namespace: kuma-demo
  annotations:
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /hello-soap
        pathType: Prefix
        backend:
          service:
            name: rest-to-soap
            port:
              number: 80
